--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "typescript-chain",
   "version": "1.0.0",
   "description": "",
-  "scripts": {},
+  "scripts": {
+    "build": "tsc"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/reignkk1/Typescript-chain.git"
